--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -1,7 +1,13 @@
+.navContainer {
+max-width: 1200px;
+background-color: red;
+}
+
 .nav {
     display: flex;
     gap: 1rem;
     list-style: none;
+
 }
 
 .link {
